--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,8 +19,7 @@
 		{% endblock %}
 	</div>
 	<div id="foot" class="wrapper">
-		<p>A small graphing app by nickreid</p>
-		<p>Data is pulled from twitter</p>
+		<p>Just a quick prototype</p>
 	</div>
 	<div id="templates">
 		{% block templates %}
