--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 	<div id="about">
-		<p>This is an illustration of the conversation about HIV and AIDS on Twitter in the region of San Francisco.</p>
+		<p>This is an illustration of the conversation about HIV and AIDS on Twitter in the region of the San Francisco Bay Area.</p>
+		<p>Each blue bar represents the amount of tweets that mention "HIV" or "AIDS" on a specific day.</p>
 	</div>
 	<div id="graph">
 		
